crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__fuzzer__config_works_with_seed_only.snap
---
source: tests/integration/single_attributes/fuzzer.rs
expression: format_output(&result)
---
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::FuzzerConfig {
            seed: Option::Some(0x28f), runs: Option::None,
        }
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_fuzzer'>(data.span());
        return Default::default();
    };
}
