crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__fuzzer__config_wrapper_work_with_fn_with_params@after_fuzzer_wrapper.snap
---
source: tests/integration/single_attributes/fuzzer.rs
expression: format_output(&result)
---
fn empty_fn__snforge_internal_fuzzer_generated() {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::FuzzerConfig {
            seed: Option::None, runs: Option::None,
        }
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_fuzzer'>(data.span());
        empty_fn(
            snforge_std::fuzzable::Fuzzable::blank(), snforge_std::fuzzable::Fuzzable::blank(),
        );
        return Default::default();
    }
    let f = snforge_std::fuzzable::Fuzzable::<felt252>::generate();
    snforge_std::_internals::save_fuzzer_arg(@f);
    let u = snforge_std::fuzzable::Fuzzable::<u32>::generate();
    snforge_std::_internals::save_fuzzer_arg(@u);
    empty_fn(f, u);
}
#[__internal_config_statement]
fn empty_fn(f: felt252, u: u32) {}
