crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__fuzzer__work_with_args.snap
---
source: tests/integration/single_attributes/fuzzer.rs
expression: format_output(&result)
---
#[__fuzzer_config(runs: 655, seed: 32872357)]
#[__fuzzer_wrapper]
fn empty_fn() {}
